# advent_of_fpga

./: README.md
d1/hardcaml1/: README.md  d1.opam  dune-project
d1/hardcaml1/host/: dune  host.ml
d1/hardcaml1/hw/: core.ml  top.ml  top_intf.ml
d1/hardcaml1/sim/: sim_core.ml  sim_top.ml
d1/hardcaml1/test/: dune  test_d1.ml
d1/hardcaml2/: README.md  dune-project  hardcaml_d1_2.opam
d1/hardcaml2/host/: dune  host.ml
d1/hardcaml2/hw/: core.ml  dune  interface.ml  top.ml  top_intf.ml
d1/hardcaml2/lib/: dune
d1/hardcaml2/sim/: dune  sim_core.ml  sim_top.ml
d1/hardcaml2/test/: dune  test_hardcaml_d1_2.ml
d12/hardcaml/: README.md  dune-project  input.txt  present_packer.opam
d12/hardcaml/hw/: present_packer_core.ml
d12/hardcaml/sim/: dune  sim_core.ml
d12/hardcaml/test/: dune  test_present_packer.ml
d2/hardcaml1/: README.md  dune-project  pattern_finder.opam
d2/hardcaml1/hw/: dune  pattern_finder.ml
d2/hardcaml1/test/: test_pattern_finder.ml
d2/hardcaml2/: README.md
d2/hardcaml2/hw/: pattern_finder.ml
d2/hardcaml2/sim/: sim_core.ml
d2/hardcaml2/test/: dune  test_pattern_finder.ml
d3/hardcaml1/: README.md  dune-project
d3/hardcaml1/hw/: joltage_core.ml
d3/hardcaml1/sim/: dune  sim_core.ml
d3/hardcaml1/test/: test_pattern_finder.ml
d3/hardcaml2/: README.md  joltage_finder.opam
d3/hardcaml2/hw/: joltage_core.ml
d3/hardcaml2/sim/: sim_core.ml
d3/hardcaml2/test/: test_pattern_finder.ml
d4/hardcaml1/: README.md  dune-project
d4/hardcaml1/hw/: paper_roll_core.ml
d4/hardcaml1/sim/: sim_core.ml
d4/hardcaml1/test/: test_paper_roll.ml
d4/hardcaml2/: README.md  paper_roll_finder.opam
d4/hardcaml2/hw/: fifo_queue.ml  grid_bram.ml  init_stream.ml  paper_roll_part2.ml  peel_fsm.ml
d4/hardcaml2/sim/: sim_core.ml
d4/hardcaml2/test/: dune  test_paper_roll.ml
