(lang dune 3.20)

(name d1)

(generate_opam_files true)

(source
 (github janestreet/hardcaml_aoc_2024))

(authors "Yannick")

(maintainers "Yannick")

(license MIT)

(package
 (name d1)
 (synopsis "Advent of Code 2024 Day 1 Part 1 in Hardcaml")
 (description "Hardware implementation of dial zero landing counter")
 (depends ocaml dune hardcaml hardcaml_waveterm))
