(lang dune 3.16)

(name pattern_finder)

(generate_opam_files true)

(source
 (github username/pattern-finder))

(authors "Author Name <author@example.com>")

(maintainers "Maintainer Name <maintainer@example.com>")

(license MIT)

(package
 (name pattern_finder)
 (synopsis "Hardcaml implementation of repeated-pattern number finder")
 (description
  "Finds numbers formed by repeating digit patterns (like 11, 1212, 123123) in a range and computes their sum. Synthesizable for FPGA deployment.")
 (depends
  (ocaml
   (>= 5.1))
  (dune
   (>= 3.16))
  (hardcaml
   (>= 0.17))
  hardcaml_waveterm
  (ppx_hardcaml :with-test)
  (ppx_jane :with-test)
  (expect_test_helpers_core :with-test)
  core
  core_unix))
