(lang dune 3.16)

(name joltage_finder)

(generate_opam_files true)

(source
 (github username/joltage-finder))

(authors "Author Name <author@example.com>")

(maintainers "Maintainer Name <maintainer@example.com>")

(license MIT)

(package
 (name joltage_finder)
 (synopsis "Hardcaml implementation of battery joltage maximizer")
 (description
  "Streaming hardware implementation for finding maximum 2-digit joltage from battery banks. Synthesizable for FPGA deployment.")
 (depends
  (ocaml
   (>= 5.1))
  (dune
   (>= 3.16))
  (hardcaml
   (>= 0.17))
  hardcaml_waveterm
  (ppx_hardcaml :with-test)
  (ppx_jane :with-test)
  (expect_test_helpers_core :with-test)
  core
  core_unix))
